amélioration de la structure

--- a/public/index.html
+++ b/public/index.html
@@ -79,18 +79,15 @@
         <div class="row">
             <div class="col-md-4">
                 <h2>Finance</h2>
-                <p align="justify">Autodidacte, c'est grace à l'intérim que j'ai intégré le monde de la finance en 2003, à travers un poste d'assistante de direction au sein d'un grand cabiet d'audit. Puis, à la recherche d'un CDI, je me suis orientée vers une entreprise de location longue durée de véhicule ou j'occupe une fonction d'analyse financiare. 10 ans ont passé et mes responsabilités ont beaucoup évolué. Au fil des ans je commence à être détachée sur des évolutions de produits, puis des projets toujours pour le département finance. L'évolution des autodidactes étant compliqué, je me rends à l'évidence, il me faut un diplome. C'est alors que la reflexion d'une reconversion commence à murir.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+                <p align="justify">Autodidacte, c'est grace à l'intérim que j'ai intégré le monde de la finance en 2003, à travers un poste d'assistante de direction au sein d'un grand cabiet d'audit. Puis, à la recherche d'un CDI, je me suis orientée vers une entreprise de location longue durée de véhicules ou j'occupe une fonction d'analyse au sein du département finance. Au cours de dix année, j'ai été associée à des évolutions de produits, puis des projets. Changer de fonction ou d'entreprise en tant qu'autodidacte s'avère très compliqué, je me rends à l'évidence, il me faut un diplome. C'est alors que la reflexion d'une reconversion commence à murir.</p>
             </div>
             <div class="col-md-4">
                 <h2>Informatique</h2>
-                <p align="justify">Passionnée par les nouvelles technologies et toujours à la recherche d'optimisation de mes outils, l'informatique s'impose comme une évidence. Voilà enfin la parfaite solution qui allira mon expérience à mes centres d'intérêts. Je décide donc d'entreprendre les démarches nécessaires à un congé individuel de formation d'un an visant l'obtention d'un BTS SIO option SLAM (Services Informatiques aux Organisations - Solutions Logiciels Applications Métiers) au sein du groupe GEFOR.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+                <p align="justify">Passionnée par les nouvelles technologies et toujours à la recherche de l'optimisation de mes outils, l'informatique s'impose comme une évidence. Voilà enfin la parfaite solution qui allira mon expérience à mes centres d'intérêts. Je décide donc d'entreprendre les démarches nécessaires à un congé individuel de formation d'un an visant l'obtention d'un BTS SIO option SLAM (Services Informatiques aux Organisations - Solutions Logiciels Applications Métiers) au sein du groupe GEFOR.</p>
             </div>
             <div class="col-md-4">
                 <h2>Futur</h2>
-                <p align="justify">A l'issue de mon année de formation (juin 2015), je souhaite accéder à un métier exploitant mes deux compétences, l'analyse financière et l'informatique. J'envisage donc de me spécialiser en informatique décisionnel, Bisness Intelligence.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+                <p align="justify">A l'issue de mon année de formation (juin 2015), je souhaite accéder à un métier exploitant mes compétences, l'analyse et l'informatique. J'envisage donc de me spécialiser en informatique décisionnel, Bisness Intelligence.</p>
             </div>
       </div>
 
@@ -99,7 +96,7 @@
       <footer>
         <p>© Company 2014</p>
       </footer>
-    </div>
+    </div> 
 </body>
 </html>
 
