--- a/public/passion.html
+++ b/public/passion.html
@@ -55,12 +55,38 @@
                     <li class="active"><a href="passion.html">Passion</a></li>                    
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+
             </div><!--/.nav-collapse -->
+
           </div>
         </div>
     </div>
-    <!-- fin de menu  -->
-     
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h2><i>Nouvelles technologies</i></h2>
+                    <img src="D:\devOdile\Mysite\public\images\nouvelle-techno 2.jpg"> 
+            </div>
+            <div class="col-md-4">
+                <h2><i>Equitation</i></h2>
+                    <img src="D:\devOdile\Mysite\public\images\equitation 3.jpg"> 
+            </div>
+        </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <h2><i>Escalade</i></h2>
+                        <img src="D:\devOdile\Mysite\public\images\escalade 2.jpg"> 
+                </div>
+
+                <div class="col-md-4">
+                    <h2><i>Plongée sous marine</i></h2>
+                       <img src="D:\devOdile\Mysite\public\images\plongee.jpg"> 
+                </div>
+            </div>
+    
+    <hr>
 
       <footer>
         <p>© Company 2014</p>
@@ -68,8 +94,5 @@
     </div>
 </body>
 </html>
-
-
-
 
 
