--- a/public/contact.html
+++ b/public/contact.html
@@ -57,6 +57,36 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
+
+    <div class="container theme-showcase" role="main">
+                <div class="panel panel-default">
+            <div class="panel-heading">
+        
+                <h2 class="text-center">Vous pouvez me contacter</h2>
+                </div>
+            </div>
+    <form class="form-horizontal" role="form">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Votre e-mail</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="votre@adresse.mail">
+                </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Votre message</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" rows="10"></textarea>
+                </div>
+    </form>
+         </div>
+    
+
      <!-- fin de menu  -->
-  </body>
+ 
+    <hr>
+        <footer>
+            <p>© Company 2014</p>
+        </footer>   
+</body>
 </html>
